Fix chrome mobile overlap

--- a/assets/quiz.css
+++ b/assets/quiz.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 .question {
-    font-size: 30px;
+    font-size: 25px;
     margin-bottom: 10px;
 }
 
@@ -75,17 +75,12 @@ button:hover {
 }
 
 .container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 10px 0px;
-    grid-auto-flow: row;
-    justify-content: stretch;
-    grid-template-areas:
-        "."
-        "."
-        ".";
-}
+    display: grid; 
+    grid-auto-columns: 1fr; 
+    grid-auto-rows: 1fr 1fr 1fr; 
+    gap: 10px 0px; 
+    justify-content: stretch; 
+  }
 
 
 
